CI: Adjust output artifact names

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,21 +20,21 @@ jobs:
             cmake: '--preset msvc-vcpkg'
             targets: 'ALL_BUILD package'
             installer: 'installer-win'
-            artifact: 'build/python-*.exe'
+            artifact: 'build/python3-*.zip'
           - os: 'macos-latest'
             triplet: 'x64-osx'
             mono: 'mono'
             cmake: '--preset ninja-vcpkg '
             targets: 'all package'
             installer: 'installer-macos'
-            artifact: 'build/python-*.dmg'
+            artifact: 'build/python3-*.tar.gz'
           - os: 'ubuntu-20.04'
             triplet: 'x64-linux'
             mono: 'mono'
             cmake: '--preset ninja-vcpkg' 
             targets: 'all package'
             installer: 'installer-ubuntu'
-            artifact: 'build/python-v*.deb'
+            artifact: 'build/python3-v*.tar.gz'
       fail-fast: false
       
     runs-on: ${{ matrix.os }}
