--- a/.github/workflows/test-installer.yml
+++ b/.github/workflows/test-installer.yml
@@ -11,6 +11,7 @@ jobs:
   test-installer:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     strategy:
+      fail-fast: false
       matrix:
         os: [macos-latest, windows-latest, ubuntu-20.04]
         include:
