--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,14 +47,14 @@ jobs:
       run: |
         ${{ matrix.mono }} `vcpkg fetch nuget | tail -n 1` \
         sources add \
-        -source "https://nuget.pkg.github.com/${{ github.event.repository.name }}/index.json" \
+        -source "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json" \
         -storepasswordincleartext \
         -name "GitHub" \
-        -username "${{ github.event.repository.name }}" \
+        -username "${{ github.repository_owner }}" \
         -password "${{ secrets.GITHUB_TOKEN }}" 
         ${{ matrix.mono }} `vcpkg fetch nuget | tail -n 1` \
         setapikey "${{ secrets.GITHUB_TOKEN }}" \
-        -source "https://nuget.pkg.github.com/${{ github.event.repository.name }}/index.json"
+        -source "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json"
 
     - name: Apt Install
       shell: bash
