--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,7 @@ elseif(WIN32)
 else()
     set(RUNTIME_INSTALL_DIR bin)
     set(BUNDLE_INSTALL_DIR "not used!!!")
-    set(LIBRARY_INSTALL_DIR lib)
+    set(LIBRARY_INSTALL_DIR bin)
     set(ARCHIVE_INSTALL_DIR lib)
     set(FRAMEWORK_INSTALL_DIR "not used!!!")
     set(INCLUDE_INSTALL_DIR include)
