--- a/.github/workflows/test-installer.yml
+++ b/.github/workflows/test-installer.yml
@@ -32,7 +32,7 @@ jobs:
         name: ${{ matrix.installer }}
         workflow: build.yml
 
-    - name: Extract and run 
+    - name: Extract 
       shell: bash
       run: |
         # Find the name of the installer 
@@ -59,6 +59,6 @@ jobs:
         $ZIP = (Get-ChildItem -Name ${{ github.event.repository.name }}-*.zip)
         $folder = (Get-Item $ZIP).DirectoryName
         echo $folder
-        cd "$folder"
+        cd -Path "$folder"
         Get-ChildItem -Path *
         Invoke-expression "${{ matrix.exe }}"
