Windows fixes related to dll loading and Python packaging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,8 +24,8 @@ if(APPLE)
 elseif(WIN32)
     set(RUNTIME_INSTALL_DIR bin)
     set(BUNDLE_INSTALL_DIR "not used!!!")
-    set(LIBRARY_INSTALL_DIR bin)
-    set(ARCHIVE_INSTALL_DIR bin)
+    set(LIBRARY_INSTALL_DIR lib)
+    set(ARCHIVE_INSTALL_DIR lib)
     set(FRAMEWORK_INSTALL_DIR "not used!!!")
     set(INCLUDE_INSTALL_DIR include)
     set(RESOURCE_INSTALL_PREFIX "")
@@ -46,4 +46,5 @@ add_subdirectory(app)
 
 # Setup installer packaging
 set(CPACK_GENERATOR "ZIP")
+include (InstallRequiredSystemLibraries)
 include(CPack)
