--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -14,11 +14,15 @@ target_compile_definitions(${PROJECT_NAME} PRIVATE $<$<BOOL:${BUILD_SHARED_LIBS}
 # rename the executable to make it consistent with install paths
 set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${CMAKE_PROJECT_NAME})
 
-# Copy all dependencies so that we can run the application during development
-add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-  COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_RUNTIME_DLLS:${PROJECT_NAME}> $<TARGET_FILE_DIR:${PROJECT_NAME}>
-  COMMAND_EXPAND_LISTS
-  )
+if(WIN32)
+    # Copy all dependencies so that we can run the application during development
+    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different 
+    $<TARGET_RUNTIME_DLLS:${PROJECT_NAME}> 
+    $<TARGET_FILE_DIR:${PROJECT_NAME}>
+    COMMAND_EXPAND_LISTS
+    )
+endif()
 
 install(TARGETS ${PROJECT_NAME}
             RUNTIME        # DLLs, Exes, 
